# backend

./: .gitignore  Cargo.toml
.github/workflows/: build_docker_image.yml
bruno_schema/: bruno.json
bruno_schema/auth/: Login.bru  Register.bru
bruno_schema/invites/: Accept invite.bru  Create invite.bru  Decline invite.bru  Get invite.bru
bruno_schema/task-execute-requests/: Confirm execute request.bru  Get execute requests.bru
bruno_schema/tasks/: Create task.bru  Delete task.bru  Execute task.bru  Get tasks.bru  Update task.bru
docker/: build.dockerfile
prisma/: schema.prisma
scripts/: start.sh
src/: config.rs  db.rs  errors.rs  extractors.rs  main.rs  prisma.rs
src/repositories/: invite.rs  mod.rs  task_execute_log.rs  task_execute_request.rs  tasks.rs  users.rs
src/services/: mod.rs
src/services/invite/: accept.rs
src/services/task_execute_request/: approve.rs
src/services/tasks/: execute.rs
src/views/: docs.rs  mod.rs  structs.rs
src/views/auth/: middleware.rs  mod.rs  structs.rs  utils.rs
src/views/execute_log/: mod.rs
src/views/execute_request/: mod.rs  structs.rs
src/views/invite/: mod.rs  structs.rs
src/views/task/: mod.rs  structs.rs
