[package]
name = "shared_moments"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "prisma-cli"
]

[dependencies]
dotenv = "0.15.0"

tokio = { version = "1.37.0", features = ["full"] }

once_cell = "1.19.0"

prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["postgresql"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
tower-http = { version = "0.5.2", features = ["trace"] }

axum = { version = "0.7.5", features = ["json"] }
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
axum-macros = "0.4.1"

serde = { version = "1.0.198", features = ["derive", "rc"] }
serde_json = "1.0.117"

bcrypt = { version = "0.15.1", features = ["std", "alloc"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"

rand = "0.8.5"

aide = { version = "0.13.4", features = ["axum", "axum-extra", "redoc", "scalar", "macros"] }
schemars = "0.8.19"
